# AOC_23

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  requirements.txt  sourceme.sh
days/day_01/: instructions.txt
days/day_01/jamie/: Cargo.toml
days/day_01/jamie/src/: main.rs  text_to_number.rs  text_to_number_rev.rs
days/day_01/liv/: main.py  test_data.txt
days/day_02/jamie/: Cargo.toml
days/day_02/jamie/benches/: parser_benchmark.rs
days/day_02/jamie/src/: lib.rs  main.rs
days/day_02/liv/: main.py
days/day_03/jamie/src/: main.rs
days/day_03/liv/: draft.py  main.py  notes.txt
days/day_04/jamie/: Cargo.toml  quick.py
days/day_04/jamie/src/: main.rs
days/day_04/liv/: main.py  test.sh
days/day_05/jamie/src/: main.rs
days/day_06/jamie/src/: main.rs
days/day_07/jamie/src/: main.rs
days/day_08/jamie/src/: main.rs
days/day_09/jamie/src/: main.rs
